using correct url encoding
removed unused decodeURI method

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/user/passwordChangeOnRemind.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/user/passwordChangeOnRemind.jspx
@@ -23,7 +23,7 @@
 			
 			<errors:global />
 			
-			<form:form action="/reminder/${mtl:encodeURI(command.reminderHash)}" method="POST" cssClass="form-horizontal">
+			<form:form action="/reminder/${mtl:encodePathSegment(command.reminderHash)}" method="POST" cssClass="form-horizontal">
 				<input type="hidden" name="ckey" value="${command.context.ckey}"/>
 				
 				<bsform:fieldset legendKey="settings.newpassword">
