--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/bibtexdetails.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/bibtexdetails.jspx
@@ -81,7 +81,7 @@
 							</div>
 							<input type="hidden" name="oldTags['${fn:escapeXml(publication.intraHash)}']" value="${fn:escapeXml(tagsString)}"/>
 							<input type="hidden" name="posts['${fn:escapeXml(publication.intraHash)}']" value="true" checked="checked" />
-							<input type="hidden" name="referer" value="/bibtex/2${publication.intraHash}/${mtl:encodeURI(post.user.name)}"/>
+							<input type="hidden" name="referer" value="/bibtex/2${publication.intraHash}/${mtl:encodePathSegment(post.user.name)}"/>
 							<input type="hidden" name="ckey" value="${fn:escapeXml(command.context.ckey)}"/>
 							<input type="hidden" name="resourcetype" value="bibtex"/>
 							<input type="hidden" name="updateExistingPost" value="true"/>
