--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/export/bookmark/rssfeed.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/export/bookmark/rssfeed.jspx
@@ -45,7 +45,7 @@
     <description>    
     	<c:out value="${mtl:removeInvalidXmlChars(post.description)}"/>
 		<c:if test="${command.context.userLoggedIn}">
-		&amp;lt;a href="${properties['project.home']}/editBookmark&amp;#63;hash=${post.resource.intraHash}&amp;amp;user=${mtl:encodeURI(post.user.name)}&amp;amp;copytag=${mtl:encodeURI(mtl:toTagString(post.tags))}" title="${fn:escapeXml(copyTitle)}"&amp;gt;				
+		&amp;lt;a href="${properties['project.home']}/editBookmark&amp;#63;hash=${post.resource.intraHash}&amp;amp;user=${mtl:encodePathSegment(post.user.name)}&amp;amp;copytag=${mtl:encodePathSegment(mtl:toTagString(post.tags))}" title="${fn:escapeXml(copyTitle)}"&amp;gt;				
 			<fmt:message key="post.actions.copy"/>
 		&amp;lt;/a&amp;gt;
 		</c:if>
