--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/author.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/author.jspx
@@ -15,7 +15,7 @@
 	
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 
-	<c:set var="requestedAuthorEncoded" value="${mtl:encodeURI(command.requestedAuthor)}" />
+	<c:set var="requestedAuthorEncoded" value="${mtl:encodePathSegment(command.requestedAuthor)}" />
 	<fmt:message key="navi.author" var="authorPageTitle" />
 	<c:set var="pageTitle" value="${authorPageTitle} :: ${command.requestedAuthor}" />
 	<layout:resourceLayout pageTitle="${pageTitle}" command="${command}" requPath="${requPath}" disableResourcetypeSelection="${true}" minimizedContentWidth="${true}" headline="${pageTitle}">
