--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/concept.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/concept.jspx
@@ -82,7 +82,7 @@
 			<!--  links to tag / concept pages -->
 			<parts:tagsAndConceptsForSidebar/>
 			
-			<!-- display user's/groups tag relations -->			
+			<!-- display user's/groups tag relations -->
 			<c:set var="headingLink" value="/concepts"/>
 			<c:set var="headingTitleKey" value="tagrelations.all.title"/>
 			<c:choose>
@@ -93,7 +93,7 @@
 				<c:when test="${not empty command.requestedGroup}">
 					<c:set var="headingLink" value="${relativeUrlGenerator.getConceptsUrlByString(command.requestedGroup)}"/>
 					<c:set var="headingTitleKey" value="tagrelations.group.title"/>
-				</c:when>						
+				</c:when>
 			</c:choose>
 			
 			<sidebar:conceptsItem 
@@ -105,17 +105,16 @@
 				headingTitleKey="${headingTitleKey}"/>
 
 
-			<!-- if requestedUser is set, show the tag cloud -->			
+			<!-- if requestedUser is set, show the tag cloud -->
 			<c:if test="${(not empty command.requestedUser) or (not empty command.requestedGroup)}">
 				<c:if test="${not empty command.requestedUser}">
-					<c:set var="requPathTagCloud" value="user/${mtl:encodeURI(command.requestedUser)}"/>
+					<c:set var="requPathTagCloud" value="user/${mtl:encodePathSegment(command.requestedUser)}"/>
 				</c:if>
 				<c:if test="${not empty command.requestedGroup}">
-					<c:set var="requPathTagCloud" value="group/${mtl:encodeURI(command.requestedGroup)}"/>
-				</c:if>				
+					<c:set var="requPathTagCloud" value="group/${mtl:encodePathSegment(command.requestedGroup)}"/>
+				</c:if>
 				<sidebar:sidebarTagCloudItem requPath="${requPathTagCloud}" cmd="${command.tagcloud}" tagboxMinfreqStyle="user"/>
 			</c:if>
-
 		</jsp:attribute>
 		
 	</layout:resourceLayout>
