--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/relations.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/relations.jspx
@@ -80,13 +80,13 @@
 						</fmt:message>
 					<a style="font-size: ${mtl:computeTagFontsize(upperTag.usercount, minUppercount, maxUpperCount, '')*1.1}%"
 					 title="${upperTagTitle}"  
-					href="/concept/tag/${mtl:encodeURI(upperTag.name)}"><c:out value="${upperTag.name}"/></a>
+					href="/concept/tag/${mtl:encodePathSegment(upperTag.name)}"><c:out value="${upperTag.name}"/></a>
 				</td>
 				<td>&#8592;</td>
 				<td>
 					<ul class="tagcloud" style="text-align:left;">
 						<c:forEach var="relation" items="${upperTag.subTags}" >  
-							<c:set var="link" value="${mtl:encodeURI(relation.name)}" />
+							<c:set var="link" value="${mtl:encodePathSegment(relation.name)}" />
 				            <li> 
 				  	        	<!-- determine subTag title depending on its frequency -->
 				    	      	<fmt:message var="subTagUsers" key="users" /> <!-- plural -->		
@@ -95,7 +95,7 @@
 							  	</c:if>
 					          	<!-- We hand over maxUpperCount to the local variable tagMaxFrequency to ensure that 
 					          	subTags in every tagCloud have the same size if their usercount is the same.  -->
-					          	<a style="font-size:${mtl:computeTagFontsize(relation.usercount, minUpperCount, maxUpperCount, '')*1.1}%" title="${relation.usercount} ${subTagUsers}" href="/tag/${mtl:encodeURI(relation.name)}"><c:out value="${relation.name}"/></a>	  	
+					          	<a style="font-size:${mtl:computeTagFontsize(relation.usercount, minUpperCount, maxUpperCount, '')*1.1}%" title="${relation.usercount} ${subTagUsers}" href="/tag/${mtl:encodePathSegment(relation.name)}"><c:out value="${relation.name}"/></a>	  	
 					    	  	<c:out value="&#32;"/>
 							</li>
 			        	</c:forEach>
