--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/spheres/sphere.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/spheres/sphere.jspx
@@ -27,10 +27,10 @@
 		</jsp:attribute>
 	
 		<jsp:attribute name="heading">
-			<parts:search pathMessageKey="navi.sphere" formAction="/sphere/${mtl:encodeURI(command.sphereName)}" formInputName="tag" formInputValue="${command.requestedTags}">
+			<parts:search pathMessageKey="navi.sphere" formAction="/sphere/${mtl:encodePathSegment(command.sphereName)}" formInputName="tag" formInputValue="${command.requestedTags}">
 				<jsp:attribute name="pathPart">
 					<li>
-						:: <a href="/sphere/${mtl:encodeURI(command.sphereName)}"><c:out value='${command.sphereName}'/></a>
+						:: <a href="/sphere/${mtl:encodePathSegment(command.sphereName)}"><c:out value='${command.sphereName}'/></a>
 					</li>
 				</jsp:attribute>
 			</parts:search>
