--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/sync.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/sync.jspx
@@ -61,12 +61,13 @@
 			<fmt:message var="synchronizationRunning" key="synchronization.synchronizationRunning"/>
 			<fmt:message var="resetService" key="synchronization.server.reset" />
 			
+			${message }
 				<!-- iterate over all services -->
 				<c:forEach var="service" items="${command.syncServer}" varStatus="status">
 					<form:form action="/ajax/synchronize" method="post" id="sync_${status.index}">
 
-						<h2><c:out value="${serviceName}: "/> <c:out value="${service.name}" /></h2>	
-									
+						<h2><c:out value="${serviceName}: "/> <c:out value="${service.name}" /></h2>
+						
 						<fieldset class="fsOuter">
 							<p>
 								<fmt:message key="synchronization.explanation">
