--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/history.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/history.jspx
@@ -314,9 +314,23 @@
 															</div>
 														</c:when>
 													</c:choose>
+													<style>
+														dt {
+  														float: left;
+ 														width: 20%;
+  														padding: 0;
+  														margin: 0
+  														}
+  														dd {
+  														float: left;
+  														width: 80%;
+  														padding: 0;
+  														margin: 0
+  														}
+  													</style>
 													<dl class="dl-horizontal">
 														<c:forEach var="diffEntry" items="${diffArrayPre}">
-  															<dt><input type="checkbox" class="invisible"/> <fmt:message key="post.resource.${diffEntry.key}"/></dt>
+  															<dt><input type="checkbox" class="invisible"/><fmt:message key="post.resource.${diffEntry.key}"/></dt>
  															<dd>${diffEntry.value}</dd>
 														</c:forEach>
 													</dl>
