--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/history.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/history.jspx
@@ -314,24 +314,21 @@
 															</div>
 														</c:when>
 													</c:choose>
-													<style>
-														dt {
-  														float: left;
- 														width: 20%;
-  														padding: 0;
-  														margin: 0
-  														}
-  														dd {
-  														float: left;
-  														width: 80%;
-  														padding: 0;
-  														margin: 0
-  														}
-  													</style>
 													<dl class="dl-horizontal">
+														<style>
+														dt {
+														float: left;
+														clear: left;
+														width: 100px;
+														text-align: right;
+														}
+														dt:after {
+														content: ":";
+														}
+														</style>
 														<c:forEach var="diffEntry" items="${diffArrayPre}">
   															<dt><input type="checkbox" class="invisible"/><fmt:message key="post.resource.${diffEntry.key}"/></dt>
- 															<dd>${diffEntry.value}</dd>
+ 															<dd><input type="checkbox" class="invisible"/>${diffEntry.value}</dd>
 														</c:forEach>
 													</dl>
 									
