--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/bibtex.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/bibtex.jspx
@@ -48,13 +48,14 @@
 	
 	<fmt:message key="navi.publication" var="pageTitle"/>
 	
-	<!-- FIXME: rss feeds -->
+	<!-- FIXME: TODODZO rss feeds -->
 	<layout:layout pageTitle="${title}"
 			loginUser="${command.context.loginUser}"
 			requPath="${requPath}"
 			noSidebar="${true}">
 		
 		<jsp:attribute name="headerExt">
+			<!-- TODODZO: merge js files -->
 			<script type="text/javascript" src="${resdir}/javascript/merged/discussion.js"><!-- keep me --></script>
 			<script type="text/javascript" src="${resdir}/Chart.js/Chart.js"><!-- keep me --></script>
 			<script type="text/javascript" src="${resdir}/javascript/publication.js"><!-- keep me --></script>
@@ -112,7 +113,7 @@
 					</jsp:attribute>
 				</sidebar:sidebarItem>
 			</c:if>
-				
+			
 			<!-- copy users -->
 			<resources:metaData command="${command}" />
 		</jsp:attribute>
