added edit url to url generator
added more messages

fixed more bugs

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/url.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/url.jspx
@@ -120,7 +120,7 @@
 			+ content heading
 			+-->
 		<jsp:attribute name="content">
-			<goldstandardbookmark:details post="${post}" loginUser="${command.context.loginUser}" />
+			<goldstandardbookmark:details post="${post}" loginUser="${command.context.loginUser}" postOfLoggedInUser="${command.postOfLoggedInUser}"/>
 			<!-- COMMUNITY POST -->
 			<!--<input id="publicInput" name="publicInput" value="${isPublic}" type="hidden" />
 			<c:if test="${not goldstandardPresent}">
