working on related pubs layouting, js

--- a/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
@@ -46,6 +46,20 @@
 	.citation-box {
 		margin-bottom: 50px;
 	}
+	
+	#related-publications {
+		ul {
+			padding-left: 0px;
+		
+			li {
+				list-style: none;
+			}
+		}
+		
+		.btn-group {
+			margin-bottom: 10px;
+		}
+	}
 }
 
 .community-info {
