enabled group delete

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/groupSettings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/groupSettings.jspx
@@ -49,7 +49,7 @@
 			
 			<groupsettings:userlists group="${group}" />
 			
-			<!--<groupsettings:delete group="${group}" />-->
+			<groupsettings:delete group="${group}" />
 		</jsp:attribute>
 
 	</layout:tabLayout>
