--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/groupRequest.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/groupRequest.jspx
@@ -95,8 +95,9 @@
 						<script type="text/javascript" src="${resdir}/javascript/requestGroupAutocomplete.js"><!-- keep me --></script> 
 					</c:if>
 					
-					<bsform:captcha labelColSpan="3" inputColSpan="9" />
-					
+					<c:if test="${!isAdmin}">
+						<bsform:captcha labelColSpan="3" inputColSpan="9" />
+					</c:if>
 					<div class="col-sm-offset-3" >
 						<bsform:button style="primary" size="defaultSize" value="${requestGroup}" type="submit" />
 					</div>
