--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/settings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/settings.jspx
@@ -27,8 +27,11 @@
 		<jsp:attribute name="headerExt">
 			<link rel="stylesheet" type="text/css" href="${resdir}/css/cv_page.css" />
 			<script type="text/javascript" src="${resdir}/javascript/cv/handlers.js"><!--  --></script>
-			<script type="text/javascript" src="${resdir}/javascript/profile/handlers.js"><!-- --></script>
+			<script type="text/javascript" src="${resdir}/javascript/profile/handlers.js"><!-- --></script>			
+			<script type="text/javascript" src="${resdir}/typeahead.js/js/typeahead.bundle.js"><!-- keep me --></script>
 			<script type="text/javascript" src="${resdir}/javascript/settings.js"><!-- keep me --></script>
+			
+			<link rel="stylesheet" type="text/css" href="${resdir}/typeahead.js/css/typeahead.css"/>
 		</jsp:attribute>
 		
 		<jsp:attribute name="breadcrumbs">
