resolved #2340 rework of the main navigation bar

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -1393,3 +1393,8 @@ ul#urlList {
 	margin-right: 0;
 	.border-left-radius(0);
 }
+
+/******** menu adjustment ********/
+#menu-user-icon-toggle-button {
+	border: none !important;
+}
