increased font size for authors and venue

--- a/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
@@ -1,9 +1,10 @@
 #goldstandard {
 	h1 {
 		font-size: 100%;
-		
-		.publication-description {
-			font-size: 75%;
+	
+		small {
+			line-height: 1.3;
+			font-size: 60%;
 			display: block;
 			margin-top: 0.4em;
 		}
