fixed toggle reply and delete

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
@@ -25,7 +25,7 @@ ul.media-list > li.form {
 	margin-top: 20px;
 }
 
-li.comment, li.review {
+li.comment, li.review, li.discussionitem {
 	.bookCiteBox, .citeBox {
 		font-size: 85%;
 		
