readded stars to reviews

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
@@ -26,6 +26,10 @@ ul.media-list > li.form {
 }
 
 li.comment, li.review, li.discussionitem {
+	.rating-disabled {
+		cursor: default;
+	}
+	
 	.bookCiteBox, .citeBox {
 		font-size: 85%;
 		
