--- a/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
@@ -1,10 +1,10 @@
 #goldstandard {
 	h1 {
 		font-size: 100%;
-	
-		small {
+		
+		.publication-description {
 			line-height: 1.3;
-			font-size: 60%;
+			font-size: 95%;
 			display: block;
 			margin-top: 0.4em;
 		}
