ajax like creating of reviews

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-discussion.less
@@ -19,6 +19,12 @@
 	margin-bottom: 25px;
 }
 
+.discussion-all {
+	.rating-xs {
+		font-size: 1.5em;
+	}
+}
+
 @discussion-image-size: 44px;
 
 ul.media-list > li.form {
