--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/bibtex.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/bibtex.jspx
@@ -88,7 +88,7 @@
 				<c:set var="postToShow" value="${command.goldStandardPublications.list[0]}" />
 			</c:if>
 			
-			<goldstandardpublication:details post="${postToShow}" postOfLoggedInUser="${command.postOfLoggedInUser}" loginUser="${command.context.loginUser}"/>
+			<goldstandardpublication:details  post="${postToShow}" postOfLoggedInUser="${command.postOfLoggedInUser}" loginUser="${command.context.loginUser}" postUserName="${command.postOwner}"/>
 		</jsp:attribute>
 		
 		<!--+
