--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/url.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/url.jspx
@@ -93,7 +93,7 @@
 			<parts:infobox>
 				<jsp:attribute name="infoTextBody">
 					<!-- short info about discussion -->
-					<fmt:message key="discussion.info"><fmt:param><fmt:message key="discussion.info.bookmark"></fmt:message></fmt:param></fmt:message>                
+					<fmt:message key="discussion.info"><fmt:param><fmt:message key="discussion.info.bookmark"></fmt:message></fmt:param></fmt:message>
 					
 					<!-- quick links on what you can do -->
 					
@@ -120,36 +120,7 @@
 			+ content heading
 			+-->
 		<jsp:attribute name="content">
-			<goldstandardbookmark:details post="${post}" loginUser="${command.context.loginUser}" postOfLoggedInUser="${command.postOfLoggedInUser}"/>
-			<!-- COMMUNITY POST -->
-			<!--<input id="publicInput" name="publicInput" value="${isPublic}" type="hidden" />
-			<c:if test="${not goldstandardPresent}">
-				<c:set var="post" value="${command.bookmark.list[0]}" />
-
-				<fmt:message key="actions.community_post.create" var="goldTitle" />
-				<h1 class="content-header"><c:out value="${pageTitle}" /></h1>
-				<div class="text-center">
-					<div class="lead">
-						<p><fmt:message key="actions.community_post.no" /></p> 
-					</div>
-					<c:if test="${not empty command.context.loginUser.name}">
-						<c:url var="editGoldStandardLink" value="/editGoldStandardBookmark">
-						<c:param name="hash" value="${post.resource.intraHash}" />
-						<c:param name="user" value="${post.user.name}" />
-						<c:param name="editBeforeSaving" value="true" />
-					</c:url>
-						<a class="btn btn-primary" href="${editGoldStandardLink}">${goldTitle}</a>
-					</c:if>
-					<hr />
-				</div>
-				-->
-				<!-- invokes discussion forms -->
-			<!--	<c:if test="${not goldstandardPresent}">
-					<discussion:discussion loginUser="${command.context.loginUser}" resource="${bookmark}" discussionItems="${command.discussionItems}"  postUserName="${command.postOwner}"/>
-				</c:if>
-				
-				<input type="hidden" id="gs_present" value="${goldstandardPresent}"/>
-			</c:if>-->
+			<goldstandardbookmark:details post="${post}" loginUser="${command.context.loginUser}" postOfLoggedInUser="${command.postOfLoggedInUser}" postUserName="${command.postOwner}"/>
 		</jsp:attribute>
 	</layout:layout>
 </jsp:root>
